--- a/client/src/components/Overlay/Overlay.module.scss
+++ b/client/src/components/Overlay/Overlay.module.scss
@@ -4,7 +4,6 @@
   position: fixed;
   inset: 0;
   background-color: rgba($black, 0.5);
-  z-index: 9;
 
   display: flex;
   flex-direction: column;
